# fastapi-mail

./: pyproject.toml  tox.ini
