[tool.poetry]
name = "fastapi-mail"
version = "0.4.1"
description = "Simple lightweight mail library for FastApi"
authors = ["Sabuhi Shukurov <sabuhi.shukurov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sabuhish/fastapi-mail"
repository = "https://github.com/sabuhish/fastapi-mail"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
aiosmtplib = "^1.1.6"
email-validator = "^1.2.1"
pydantic = "^1.9.1"
aioredis = "^2.0.1"
httpx = "^0.23.0"
blinker = "^1.4"
fakeredis = "^1.8"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
